# Native32Emu

./: .gitattributes  .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  Makefile  README.md  build-libretro.bat  build-libretro.sh  core.info  smoke_test.ps1  sonar-project.properties
.github/workflows/: ci.yml  codeql-analysis.yml  nightly-build.yml  pages.yml  release.yml  sonar-report.yml
crates/native32emu/: Cargo.toml
crates/native32emu-core/: Cargo.toml
crates/native32emu-core/src/: action_vm.rs  actions.rs  archive_loader.rs  audio_engine.rs  cheats.rs  content_loader.rs  dat_loader.rs  des_constants.rs  emulator.rs  file_browser.rs  file_loader.rs  frame_player.rs  header_decryptor.rs  image_decoder.rs  input_handler.rs  lib.rs  renderer.rs  save_state.rs  sprite_system.rs
crates/native32emu-core/src/mpeg/: audio.rs  buffer.rs  demux.rs  mod.rs  player.rs  video.rs
crates/native32emu-core/tests/: cutscene.rs  mpeg_demux.rs  smoke.rs
crates/native32emu-libretro/: Cargo.toml  native32emu_libretro.info
crates/native32emu-libretro/src/: lib.rs
crates/native32emu-libretro/src/libretro/: api.rs  constants.rs  types.rs
crates/native32emu/src/: main.rs
crates/native32emu/src/standalone/: cli.rs  mod.rs  scaler.rs  xbrz.rs
crates/native32emu/src/standalone/scaler/: mod.rs
crates/native32emu/src/standalone/scaler/scalers/: bicubic.rs  bilinear.rs  mod.rs  xbrz.rs
docs/: Android-Libretro-Core.md  CLI-Options.md  CONTRIBUTING.md  Cheat-Codes.md  Core-Options.md  Game-Compatibility.md  Game-File-Formats.md  Release-Process.md  RetroArch-Core.md  Standalone-Emulator.md  game_list.md  iOS-Libretro-Core.md  iOS-RetroArch.md
scripts/: build-libretro.ps1  build-libretro.sh
site/: index.html
site/css/: style.css
site/js/: main.js
src/: action_vm.rs  audio_engine.rs  cli.rs  content_loader.rs  des_constants.rs  error.rs  file_loader.rs  frame_player.rs  gamepad_overlay.rs  header_decryptor.rs  image_decoder.rs  input_handler.rs  lib.rs  main.rs  renderer.rs  sprite_system.rs
src/core/: action_vm.rs  actions.rs  audio_engine.rs  content_loader.rs  emulator.rs  file_loader.rs  frame_player.rs  header_decryptor.rs  image_decoder.rs  mod.rs  renderer.rs  save_manager.rs  sprite_system.rs
src/core_emulator/: emulator.rs  mod.rs
src/libretro/: api.rs  callbacks.rs  logger.rs
src/standalone/: cli.rs
