[workspace]
resolver = "2"
members = [
    "crates/native32emu-core",
    "crates/native32emu",
    "crates/native32emu-libretro",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "A Native32 game emulator written in Rust"
license = "BSD-3-Clause"

[workspace.dependencies]
native32emu-core = { path = "crates/native32emu-core" }
anyhow = "1"
thiserror = "2"
log = "0.4"
rand = "0.10"
image = "0.25"
clap = { version = "4", features = ["derive"] }
minifb = "0.28"
rodio = { version = "0.22", features = ["mp3"] }
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true
