[workspace]
resolver = "2"
members = [
    "crates/native32emu-core",
    "crates/native32emu",
    "crates/native32emu-libretro",
]
# The libretro buildbot runs a bare `cargo build --release --target <triple>` at
# the repo root. Restrict the default build set to the libretro core so the CI
# does not try to cross-compile the standalone GUI binary (minifb/rodio, which
# need X11/ALSA). Explicit `-p` / `--workspace` selections are unaffected.
default-members = ["crates/native32emu-libretro"]

[workspace.package]
version = "1.1.0"
edition = "2021"
description = "A Native32 game emulator written in Rust"
license = "BSD-3-Clause"

[workspace.dependencies]
native32emu-core = { path = "crates/native32emu-core" }  # Platform-independent emulator engine
anyhow = "1"              # Error handling (ergonomic Result types)
thiserror = "2"           # Error handling (custom error enums)
log = "0.4"               # Logging facade
serde = { version = "1", features = ["derive"] }  # Save-state serialization
serde_json = "1"          # Versioned save-state payloads
crc32fast = "1"           # Save-state integrity checks
image = "0.25"            # Image processing
clap = { version = "4", features = ["derive"] }  # CLI argument parsing (standalone)
minifb = "0.28"           # Window creation and pixel rendering (standalone)
rodio = { version = "0.22", features = ["mp3"] }  # Audio playback, MP3 + PCM (standalone)
symphonia = { version = "0.6.0", default-features = false, features = ["mp3"] }  # Pure-Rust MP3 decoding
env_logger = "0.11"       # Log output to stderr (standalone)

[profile.release]
opt-level = 3
lto = true
strip = true
