[package]
name = "native32emu-libretro"
version.workspace = true
edition.workspace = true
description = "libretro core for Native32Emu (loadable by RetroArch)"
license.workspace = true

[lib]
# The libretro buildbot's official Rust CI templates build with
# `cargo build --release` and then rename the cdylib by appending `_libretro`
# (e.g. libnative32emu.so -> native32emu_libretro.so), so the lib target is
# named `native32emu` (matching CORENAME in .gitlab-ci.yml). For local RetroArch
# installs, rename the produced cdylib to native32emu_libretro.<ext> manually.
name = "native32emu"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
native32emu-core.workspace = true
log.workspace = true
